Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/LabeledDeclaration.out
LabeledDeclaration.java:12:14: compiler.err.variable.not.allowed
1 error
